search method modified

--- a/covid19-api/index.html
+++ b/covid19-api/index.html
@@ -17,8 +17,14 @@
         <button class="search-button" type="button" id="search-btn"><div id="search-icon"></div></button>
     </div>
     <div id="error-container" class="error"></div>
-    <div id="search-data-container"></div>
-    <div id="worldwide-data-container"></div>
+    <div class="search-result">
+      <h3 id="search-header"></h3>
+      <div id="search-data-container"></div>
+    </div>
+    <div class="world-result">
+      <h3>Worldwide Data</h3>
+      <div id="worldwide-data-container"></div>
+    </div>
   </main>
 </body>
 </html>
