--- a/covid19-api/index.html
+++ b/covid19-api/index.html
@@ -21,7 +21,7 @@
       <h3 id="search-header"></h3>
       <div id="search-data-container"></div>
     </div>
-    <div class="searches" id="searches"><button id="show-searches">Show Recent Searches</button></div>
+    <div class="searches" id="searches"></div>
     <div class="world-result">
       <h3>Worldwide Data</h3>
       <div id="worldwide-data-container"></div>
