worked on the colors and adjust the layout for small view

--- a/covid19-api/index.html
+++ b/covid19-api/index.html
@@ -17,12 +17,15 @@
         <input id="input" class="input" type="text" placeholder="Search Country" />
         <button class="search-button" type="button" id="search-btn"><div id="search-icon"></div></button>
     </div>
-    <div class="search-result" id="result-container">
+    <div class="container search-result" id="result-container">
       <h3 id="search-header"></h3>
       <div id="search-data-container"></div>
     </div>
-    <div class="searches" id="searches"></div>
-    <div class="world-result">
+    <div class="container searches-container">
+      <h5>Your Recent Searches:</h5>
+      <div class="searches" id="searches"></div>
+    </div>
+    <div class="container world-result">
       <h3>Worldwide Data</h3>
       <div id="worldwide-data-container"></div>
     </div>
